EBEAST: app.html: allow async menu initialisation
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -122,7 +122,7 @@
     if (window.Electron)
       {
 	const menus = await import ('./menus.js');
-	menus.setup_app_menu();
+	await menus.setup_app_menu();
 	loadstatus.innerText += "Loaded Menus...\n";
       }
     else
