EBEAST: app.html: support [chrome] and [gecko] selectors for <html/>
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -52,6 +52,12 @@
 </head>
 <body>
 
+  <script>
+  // Helper for browser specific CSS
+  document.body.parentElement.toggleAttribute ('gecko', navigator.userAgent.indexOf ('Gecko/') >= 0);
+  document.body.parentElement.toggleAttribute ('chrome', navigator.userAgent.indexOf ('Chrome/') >= 0);
+  </script>
+
   <div id="body-load-status" style="position: fixed; margin: 0 auto; left: 0; right: 0; z-index: 101;
 				    padding: 1em; background: #222f; color: #8f8; width: 40em; height: 100%; ">
     <p>
