--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -100,6 +100,7 @@
   // utilities.js
   import * as Util from './utilities.js'; // depends on Vue
   window.Util = Util;
+  Vue.prototype.observable_from_getters = Util.vue_observable_from_getters;
   for (let directivename in Util.vue_directives) // register all utility directives
     Vue.directive (directivename, Util.vue_directives[directivename]);
   loadstatus.innerText += "Loaded Util...\n";
