EBEAST: app.html: set `inheritAttrs: false` for all Vue components
Vue-3 will always sort all non-props attributes into $attrs. This works
fine for our components, so we enable the behaviour in Vue-2 already.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -97,6 +97,7 @@
   Vue.prototype.$log = window.$log;
   Vue.prototype.assert = window.assert;
   Vue.prototype.CONFIG = CONFIG;
+  Vue.options.inheritAttrs = false; // Add non-props attributes to $attrs (default in Vue-3)
   // utilities.js
   import * as Util from './utilities.js'; // depends on Vue
   window.Util = Util;
