EBEAST: app.html: expand root element and constrain minimum size
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -50,7 +50,7 @@
   </script>
 
 </head>
-<body>
+<body style="min-width: 320px; min-height: 320px">
 
   <script>
   // Helper for browser specific CSS
@@ -68,7 +68,7 @@
     </p>
   </div>
 
-  <div id="vue-mountpoint">
+  <div id="vue-mountpoint" class="b-root" style="display: flex; width: 100%; height: 100%">
 
     <b-projectshell ref="Vue-prototype-Shell" ></b-projectshell>
 
