--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -6,7 +6,7 @@
   'use strict';
   const CONFIG = { MAXINT: 2147483647, MAXUINT: 4294967295, /*@EBEAST_CONFIG@*/ };
   window.CONFIG = CONFIG; // Makefile.mk substitutes /*@EBEAST_CONFIG@*/ in file headings
-  window.MAINCONFIG = { args: [] }; // default for non-Electron connections
+  window.MAINCONFIG = { files: [], p: '', m: '', norc: false, }; // default for non-Electron connections
   </script>
 
   <link rel="modulepreload" href="./utilities.js">
@@ -144,7 +144,7 @@
     else
       loadstatus.innerText += "Skipped Menus...\n";
     // Load command line files
-    for (let arg of window.MAINCONFIG.args)
+    for (let arg of window.MAINCONFIG.files)
       {
 	const error = await Shell.load_project (arg);
 	if (error != Bse.Error.NONE)
