EBEAST: provide 'EQ' shorthand to compare objects
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.html
+++ b/ebeast/app.html
@@ -99,6 +99,8 @@
   // utilities.js
   import * as Util from './utilities.js'; // depends on Vue
   window.Util = Util;
+  window.EQ = Util.equals_recursively;
+  Vue.prototype.EQ = window.EQ;
   Vue.prototype.observable_from_getters = Util.vue_observable_from_getters;
   for (let directivename in Util.vue_directives) // register all utility directives
     Vue.directive (directivename, Util.vue_directives[directivename]);
